[package]
name = "ct-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.3"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
indicatif = "0.18.4"
anyhow = "1.0"

[dependencies.uuid]
version = "1.23.1"
# Lets you generate random UUIDs
features = [
    "v4",
]